Add Big Blue Hole banner

--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -186,7 +186,7 @@
 
 							<h2>Why</h2>
 							<p><span class="image right"><img src="images/gwc-empowered177x163r72.png" alt="Photo of 4 girl coders feeling empowered at a SGWC Show Case" /></span>
-								<a hreflang="https://www.unwomen.org/en/news/stories/2019/1/compilation-women-entrepreneurs"><blockquote>
+								<a href="https://www.unwomen.org/en/news/stories/2019/1/compilation-women-entrepreneurs" target="_blank"><blockquote>
 									The future of a globalized economy is female</blockquote>
 								</a>
 								In Belize, free education stops at age 12.
