--- a/belizeweb/clubs.html
+++ b/belizeweb/clubs.html
@@ -52,8 +52,10 @@
 					<div id="main">
 						<div class="inner">
 							<h1>SS22 MSU x Pathlight Cohorts</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="images/bigblueholewallpaperbetter.com1152x326r72.jpg" alt="" /></span>
 							<p>Check back after January 15 for information specific to your cohort.</p>
+
+							<p>Banner: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-nzgef" target="_blank">Big Blue Hole, Belize</a>
 						</div>
 					</div>
 
