--- a/belizeweb/clubs.html
+++ b/belizeweb/clubs.html
@@ -55,7 +55,7 @@
 							<span class="image main"><img src="images/bigblueholewallpaperbetter.com1152x326r72.jpg" alt="" /></span>
 							<p>Check back after January 15 for information specific to your cohort.</p>
 
-							<p>Banner: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-nzgef" target="_blank">Big Blue Hole, Belize</a>
+							<p>Banner: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-nzgef" target="_blank">Great Blue Hole, Belize</a>
 						</div>
 					</div>
 
