add resources and footers

--- a/belizeweb/supporters.html
+++ b/belizeweb/supporters.html
@@ -161,14 +161,6 @@
 													Laura K. Dillon
 												</a>
 											</td>
-											<td>
-												<a href="">
-												</a>
-											</td>
-											<td>
-												<a href="">
-												</a>
-											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -201,52 +193,101 @@
 									Ph: 800-232-4678 (Toll Free)<br>
 								</p>
 
-								<p>Banner photo: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-aljjw" target="_blank">Belize tropical landscape</a>. 
+								<p>Banner photo: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-aljjw" target="_blank">Belize tropical landscape</a>.
 
 							</div>
 
 						</div>
 					</div>
 
-				<!-- Footer -->
+					<!-- Footer -->
+						<!-- template version
+						<footer id="footer">
+							<div class="inner">
+								<section>
+									<h2>Get in touch</h2>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<input type="text" name="name" id="name" placeholder="Name" />
+											</div>
+											<div class="field half">
+												<input type="email" name="email" id="email" placeholder="Email" />
+											</div>
+											<div class="field">
+												<textarea name="message" id="message" placeholder="Message"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send" class="primary" /></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<h2>Follow</h2>
+									<ul class="icons">
+										<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
+										<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+										<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									</ul>
+								</section>
+								<ul class="copyright">
+									<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+									<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								</ul>
+							</div>
+						</footer>
+					-->
+
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+						<div class="box alt">
+							<div class="row gtr-uniform">
+
+										<!-- contact information -->
+										<div class="col-4">
+												<h4>Contact</h4>
+												428 S. Shaw Lane<br>
+												Engineering Building, Room 1410A<br>
+												Michigan State University<br>
+												East Lansing, MI 48824<br>
+												Phone: (517)884-0054<br>
+												Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
 										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
+
+										<!-- links -->
+										<div class="col-4">
+												<h4>Links</h4>
+												<ul>
+														<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU WIE</a></li>
+														<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU CSE</a></li>
+														<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+												</ul>
 										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
+
+
+										<!-- about Technovation -->
+										<div class="col-4">
+												<h4>Nondiscrimination</h4>
+													MSU WIE does not unlawfully discriminate.
+													All events and programs are open to students of all genders.<br>
+													<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
 										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
+
+								</div> <!-- /.row -->
+						</div> <!-- /.box -->
+
 							<ul class="copyright">
-								<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
-						</div>
+						</div> <!-- inner -->
+
 					</footer>
 
 			</div>
