--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -56,6 +56,9 @@
 								<div class="box alt">
 									<div class="row gtr-uniform">
 										<div class="col-12"><span class="image fit"><img src="images/2019 MSU mentors1152x326r72.jpg" alt="" /></span></div>
+
+										<div class="col-12"><span><center><h2>MSU Student Mentors</h2></center></span></div>
+
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/McDonald750x1000_78R.jpg" alt="Photo of Andrew" /></span>
 											<center>
 												<h3>Andrew</h3>
@@ -135,6 +138,32 @@
 											</center>
 										</div>
 
+										<div class="col-12"><span><center><h2>Advisers</h2><center></span></div>
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Consuelo" /></span>
+											<center>
+												<h3>Consuelo</h3>
+												??<br>Pathlight International<br>Belize
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
+											<center>
+												<h3>Teresa</h3>
+												Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
+											</center>
+										</div>
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/LaurieCSforALL.jpg" alt="Photo of Laura" /></span>
+											<center>
+												<h3>Laura</h3>
+												Professor Emeritus<br> Comp. Sci. &amp; Eng.<br>MSU
+											</center>
+										</div>
+
+
+
 									</div>
 								</div>
 							</section>
@@ -142,6 +171,7 @@
 					</div>
 
 				<!-- Footer -->
+					<!-- template version
 					<footer id="footer">
 						<div class="inner">
 							<section>
@@ -177,10 +207,59 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
+				-->
+
+				<footer id="footer">
+					<div class="inner">
+					<div class="box alt">
+						<div class="row gtr-uniform">
+
+									<!-- contact information -->
+									<div class="col-4">
+											<h4>Contact</h4>
+											428 S. Shaw Lane<br>
+											Engineering Building, Room 1410A<br>
+											Michigan State University<br>
+											East Lansing, MI 48824<br>
+											Phone: (517)884-0054<br>
+											Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+									</div>
+
+									<!-- links -->
+									<div class="col-4">
+											<h4>Links</h4>
+											<ul>
+													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU WIE</a></li>
+													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU CSE</a></li>
+													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+											</ul>
+									</div>
+
+
+									<!-- about Technovation -->
+									<div class="col-4">
+											<h4>Nondiscrimination</h4>
+												MSU WIE does not unlawfully discriminate.
+												All events and programs are open to students of all genders.<br>
+												<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
+									</div>
+
+							</div> <!-- /.row -->
+					</div> <!-- /.box -->
+
+						<ul class="copyright">
+							<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div> <!-- inner -->
+
+				</footer>
+
 
 			</div>
 
