add Katie A photo

--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -80,10 +80,10 @@
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Katie A" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/katieA_750_1000_fixed72.jpg" alt="Photo of Katie A" /></span>
 											<center>
 												<h3>Katie A</h3>
-												Senior<br> Computer Science
+												Senior<br> Computer Engineering
 											</center>
 										</div>
 
