add Pathlight placeholder

--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -127,7 +127,8 @@
 							<section>
 								<p>
 									Photo of homes in the Belizean countryside by <a href="https://unsplash.com/@ccamwilkins?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cameron Wilkins</a> and of
-									Mayan ruin in Mountain Pine Ridge Forest Reserve by <a href="https://unsplash.com/@robincanfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Robin Canfield</a> on <a href="https://unsplash.com/s/photos/belize?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+									Mayan ruin in Mountain Pine Ridge Forest Reserve by <a href="https://unsplash.com/@robincanfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Robin Canfield</a> on <a href="https://unsplash.com/s/photos/belize?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+									Remaining photos from prior <a href="https://msu-cse-outreach.github.io/" target="_blank">Spartan Coding Clubs</a>.
 								</p>
 							</section>
 
@@ -169,7 +170,7 @@
 							</p>
 
 							<p>
-								The Spring 2022 MSU x Pathlight Coding Clubs will consist of 3 cohorts of about 20 participants each.
+								The Spring 2022 MSU x Pathlight Coding Club will consist of 3 cohorts of about 20 participants each.
 								All cohorts will meet virtually in accordance with current MSU policy for Youth Programs.
 								Participants will receive the Zoom login information by email in the week before the first meeting.
 								The information will be sent to the email address(es) provided at registration.
@@ -185,14 +186,14 @@
 
 
 							<h2>Why</h2>
-							<p><span class="image right"><img src="images/gwc-empowered177x163r72.png" alt="Photo of 4 girl coders feeling empowered at a SGWC Show Case" /></span>
+							<p><span class="image right"><img src="images/gwc-empowered227x163r72.png" alt="Photo of 4 girl coders feeling empowered at a SGWC Show Case" /></span>
 								<a href="https://www.unwomen.org/en/news/stories/2019/1/compilation-women-entrepreneurs" target="_blank"><blockquote>
 									The future of a globalized economy is female</blockquote>
 								</a>
 								In Belize, free education stops at age 12.
 								Many families cannot afford school fees for all of their children.
 								Secondary and tertiary education for sons is often prioritized over secondary education for daughters.
-								As a result, few girls have opportunity to learn 21st century skills like computing and information technology (CIT).
+								As a result, few girls have opportunity to learn important 21st century skills, like computing and information technology (CIT).
 								The CIT gender gap leaves girls ill prepared for the jobs of the future, which increasingly require strong computational skills.
 							</p>
 							<p>
