minor fixes to team and index pages

--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -103,7 +103,7 @@
 
 										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Carolyn" /></span>
 											<center>
-												<h3>Carolyn</h3>
+												<h3>Caroline</h3>
 												Junior<br> Computer Science
 											</center>
 										</div>
