new Andrew & Gigi photos, minor edits

--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -206,7 +206,7 @@
 
 							<h2>Who</h2>
 							<p><span class="image left"><img src="images/belizean-flag-medium177x163r72.jpeg" alt="Drawing of the Belizean flag. White round seal on blue background with red top and bottom stripes. The seal contains two men holding tools, a shield, a tree, and greenery." /></span>
-								Girls and boys in 1st and 2nd forms (9th and 10th grades) living in Belize.
+								Girls and boys in 1st through 4th forms (9th and 12th grades) living in Belize.
 							</p>
 							<p>
 								Fill the Spartan Coding Clubs Interest Form to receive notice of future offerings of Spartan Coding Clubs.
