--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -59,14 +59,14 @@
 
 										<div class="col-12"><span><center><h2>MSU Student Mentors</h2></center></span></div>
 
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/McDonald750x1000_78R.jpg" alt="Photo of Andrew" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/andrew750x1000r72.jpg" alt="Photo of Andrew" /></span>
 											<center>
 												<h3>Andrew</h3>
 												Senior<br> Computer Science
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Gigi750x1000_78R.jpg" alt="Photo of Gigi" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/gigi750x1000r72.png" alt="Photo of Gigi" /></span>
 											<center>
 												<h3>Gigi</h3>
 												Senior<br> Computer Science
@@ -101,21 +101,21 @@
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Carolyn" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Carolyn" /></span>
 											<center>
 												<h3>Caroline</h3>
 												Junior<br> Computer Science
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Megan" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Megan" /></span>
 											<center>
 												<h3>Megan</h3>
 												Junior<br> Crop and Soil Science
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Kushie" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Kushie" /></span>
 											<center>
 												<h3>Kushi</h3>
 												Junior<br> Computer Science
@@ -123,7 +123,7 @@
 										</div>
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of David" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of David" /></span>
 											<center>
 												<h3>David</h3>
 												Senior<br> Computational Data Science
@@ -131,12 +131,20 @@
 										</div>
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_RGB-750x1000R78.png" alt="Photo of Ryan" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Ryan" /></span>
 											<center>
 												<h3>Ryan</h3>
 												Senior<br> Applied Engineering
 											</center>
 										</div>
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Dalety" /></span>
+																					<center>
+																						<h3>Dalety</h3>
+																						First Year<br>
+																						Mechanical Engineering
+																					</center>
+																				</div>
 
 										<div class="col-12"><span><center><h2>Advisers</h2><center></span></div>
 
