expand WIE/CSE in footer and update umbrella index page

--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -127,51 +127,51 @@
 						</footer>
 					-->
 
-					<footer id="footer">
-						<div class="inner">
-						<div class="box alt">
-							<div class="row gtr-uniform">
+				<footer id="footer">
+					<div class="inner">
+					<div class="box alt">
+						<div class="row gtr-uniform">
 
-										<!-- contact information -->
-										<div class="col-4">
-												<h4>Contact</h4>
-												428 S. Shaw Lane<br>
-												Engineering Building, Room 1410A<br>
-												Michigan State University<br>
-												East Lansing, MI 48824<br>
-												Phone: (517)884-0054<br>
-												Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
-										</div>
+									<!-- contact information -->
+									<div class="col-4">
+											<h4>Contact</h4>
+											428 S. Shaw Lane<br>
+											Engineering Building, Room 1410A<br>
+											Michigan State University<br>
+											East Lansing, MI 48824<br>
+											Phone: (517)884-0054<br>
+											Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+									</div>
 
-										<!-- links -->
-										<div class="col-4">
-												<h4>Links</h4>
-												<ul>
-														<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU WIE</a></li>
-														<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU CSE</a></li>
-														<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
-												</ul>
-										</div>
+									<!-- links -->
+									<div class="col-4">
+											<h4>Links</h4>
+											<ul>
+													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
+													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
+													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+											</ul>
+									</div>
 
 
-										<!-- about Technovation -->
-										<div class="col-4">
-												<h4>Nondiscrimination</h4>
-													MSU WIE does not unlawfully discriminate.
-													All events and programs are open to students of all genders.<br>
-													<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
-										</div>
+									<!-- about Technovation -->
+									<div class="col-4">
+											<h4>Nondiscrimination</h4>
+												MSU WIE does not unlawfully discriminate.
+												All events and programs are open to students of all genders.<br>
+												<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
+									</div>
 
-								</div> <!-- /.row -->
-						</div> <!-- /.box -->
+							</div> <!-- /.row -->
+					</div> <!-- /.box -->
 
-							<ul class="copyright">
-								<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div> <!-- inner -->
+						<ul class="copyright">
+							<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div> <!-- inner -->
 
-					</footer>
+				</footer>
 
 			</div>
 
