--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -242,8 +242,8 @@
 									<div class="col-4">
 											<h4>Links</h4>
 											<ul>
-													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU WIE</a></li>
-													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU CSE</a></li>
+													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
+													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
 													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
 											</ul>
 									</div>
