--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -209,7 +209,7 @@
 								Girls and boys in 1st through 4th forms (9th and 12th grades) living in Belize.
 							</p>
 							<p>
-								Fill the Spartan Coding Clubs Interest Form to receive notice of future offerings of Spartan Coding Clubs.
+								Fill the <a href="https://forms.gle/Rm9toEsJvFZ1UQj16" target="_blank">MSU x Pathlight Coding Clubs Interest Form</a> to receive notice of future offerings of Spartan Coding Clubs.
 							</p>
 						</div>
 					</div>
@@ -279,8 +279,8 @@
 														<div class="col-4">
 																<h4>Links</h4>
 																<ul>
-																		<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU WIE</a></li>
-																		<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU CSE</a></li>
+																		<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
+																		<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
 																		<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
 																</ul>
 														</div>
