--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -115,7 +115,7 @@
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Kushie" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/khushiVora750x1000r72.jpeg" alt="Photo of Kushie" /></span>
 											<center>
 												<h3>Kushi</h3>
 												Junior<br> Computer Science
@@ -139,16 +139,25 @@
 										</div>
 
 										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Dalety" /></span>
-																					<center>
-																						<h3>Dalety</h3>
-																						First Year<br>
-																						Mechanical Engineering
-																					</center>
-																				</div>
+											<center>
+												<h3>Dalety</h3>
+												First Year<br>
+												Mechanical Engineering
+											</center>
+										</div>
 
-										<div class="col-12"><span><center><h2>Advisers</h2><center></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/joaoVitor750x1000_72R.jpeg" alt="Photo of Joao Vitor" /></span>
+											<center>
+												<h3>Joao Vitor</h3>
+												Junior<br>
+												Computer Science
+											</center>
+										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/pathlight_belize_black_square750x1000r72.png" alt="Photo of Consuelo" /></span>
+
+										<div class="col-12"><span><center><h2>MSU &amp; Pathlight Advisers</h2><center></span></div>
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey.jpeg" alt="Photo of Consuelo" /></span>
 											<center>
 												<h3>Consuelo</h3>
 												??<br>Pathlight International<br>Belize
@@ -167,6 +176,14 @@
 											<center>
 												<h3>Laura</h3>
 												Professor Emeritus<br> Comp. Sci. &amp; Eng.<br>MSU
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/emily750x1000_78R.jpg" alt="Photo of Emily" /></span>
+											<center>
+												<h3>Emily</h3>
+												Assistant Professor<br> Comp. Sci. &amp; Eng.<br>MSU
 											</center>
 										</div>
 
