--- a/spartangwc/contact.html
+++ b/spartangwc/contact.html
@@ -176,7 +176,7 @@
 
                                 <div class="col-md-3">
                                    <div class="team-member-box text-center">
-                                          <img src="assets/img/ss22photos/team/SophieMartin.jpg" class="img-responsive center-block" alt="Photo of Sophie">
+                                          <img src="assets/img/ss22photos/team/sophieMartin750x1000r72.jpg" class="img-responsive center-block" alt="Photo of Sophie">
                                           <div class="team-member-description">
                                               <div class="team-member-about">
                                                   <h4>Sophie Martin</h4>
@@ -534,7 +534,7 @@
                         <div class="headline text-center">
                             <div class="row">
                                 <div class="col-md-6 col-md-offset-3">
-                                    <h3>Advisers</h3>
+                                    <h3>MSU Advisers</h3>
                                 </div>
                             </div>
                         </div> <!-- /.headline -->
@@ -544,12 +544,30 @@
                             <div class="container">
                                 <div class="row">
 
-                                    <div class="col-md-3 col-md-offset-3">
+                                    <div class="col-md-3">
+                                        <div class="team-member-box text-center">
+                                            <img src="assets/img/ss22photos/team/TeresaVandersloot750x1000r72.jpg" class="img-responsive center-block" alt="Teresa">
+                                            <div class="team-member-description">
+                                                <div class="team-member-about">
+                                                    <h4>Teresa</h4>
+                                                    <p>Director<br>Women in Engineering<br>
+                                                      Recruiting &amp; K12 Outreach</p>
+                                                </div> <!-- end of /.team-member-about -->
+                                                <div class="team-member-social">
+                                                    <p>
+                                                        <a href="mailto:iselava1@msu.edu">iselava1@msu.edu</a>
+                                                    </p>
+                                                </div> <!-- end of /.team-member-social -->
+                                            </div> <!-- end of /.team-member-description -->
+                                        </div> <!-- end of /.team-member-box -->
+                                    </div>
+
+                                    <div class="col-md-3">
                                         <div class="team-member-box text-center">
                                             <img src="assets/img/ss22photos/team/LaurieCSforALL.jpg" class="img-responsive center-block" alt="Laurie">
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
-                                                    <h4>Laura Dillon</h4>
+                                                    <h4>Laura</h4>
                                                     <p>Professor Emeritus<br>Computer Science &amp; Engineering</p>
 
                                                 </div> <!-- end of /.team-member-about -->
@@ -570,22 +588,27 @@
 
                                     <div class="col-md-3">
                                         <div class="team-member-box text-center">
-                                            <img src="assets/img/ss22photos/team/TeresaVandersloot750x1000r72.jpg" class="img-responsive center-block" alt="Teresa">
+                                            <img src="../belizeweb/images/teamPhotos/emily750x1000_78R.jpg" class="img-responsive center-block" alt="Emily">
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
-                                                    <h4>Teresa</h4>
-                                                    <p>Director<br>Women in Engineering<br>
-                                                      Recruiting &amp; K12 Outreach</p>
+                                                    <h4>Emily</h4>
+                                                    <p>Assistant Professor<br>Computer Science &amp; Engineering</p>
+
                                                 </div> <!-- end of /.team-member-about -->
                                                 <div class="team-member-social">
-                                                    <p>
-                                                        <a href="mailto:iselava1@msu.edu">iselava1@msu.edu</a>
-                                                    </p>
+                                                    <a href="https://www.facebook.com/laurie.dillon.94" target="_blank">
+                                                        <i class="fa fa-facebook"></i>
+                                                    </a>
+                                                    <a href="https://twitter.com/ldillonmsuedu" target="_blank">
+                                                        <i class="fa fa-twitter"></i>
+                                                    </a>
+                                                    <a href="https://www.linkedin.com/in/laura-dillon-96bb54b/" target="_blank">
+                                                        <i class="fa fa-linkedin"></i>
+                                                    </a>
                                                 </div> <!-- end of /.team-member-social -->
                                             </div> <!-- end of /.team-member-description -->
                                         </div> <!-- end of /.team-member-box -->
                                     </div>
-
                                 </div>
                             </div>
                         </div> <!-- end of /.team-list -->
