more photos added

--- a/spartangwc/contact.html
+++ b/spartangwc/contact.html
@@ -534,6 +534,60 @@
                         <div class="headline text-center">
                             <div class="row">
                                 <div class="col-md-6 col-md-offset-3">
+                                    <h3>Ford Advisers</h3>
+                                </div>
+                            </div>
+                        </div> <!-- /.headline -->
+
+
+                        <div class="team-list">
+                            <div class="container">
+                                <div class="row">
+
+                                  <div class="col-md-3"> <!-- Taylor -->
+                                      <div class="team-member-box text-center">
+                                          <img src="assets/img/ss22photos/team/taylor750x100_72R.jpeg" class="img-responsive center-block" alt="Photo of Taylor" alt="Photo of Taylor">
+                                          <div class="team-member-description">
+                                              <div class="team-member-about">
+                                                  <h4>Taylor</h4>
+                                                  <p>Coaching Service Manager,<br>Transformation Office<br> Ford</p>
+                                              </div> <!-- end of /.team-member-about -->
+                                              <div class="team-member-social">
+                                                  <a href="mailto:tjone368@ford.com">
+                                                      <i class="fa fa-send-o"></i>
+                                                  </a>
+                                              </div> <!-- end of /.team-member-social -->
+                                          </div> <!-- end of /.team-member-description -->
+                                      </div> <!-- end of /.team-member-box -->
+                                  </div> <!-- Taylor -->
+
+                                  <div class="col-md-3"> <!-- Shannon -->
+                                    <div class="team-member-box text-center">
+                                        <img src="assets/img/ss22photos/team/shannon750x1000_72R.jpg" class="img-responsive center-block" alt="Photo of Shannon">
+                                          <div class="team-member-description">
+                                              <div class="team-member-about">
+                                                  <h4>Shannon</h4>
+                                                  <p>Product Owner, Vehicle Software Updates<br> Ford</p>
+                                              </div> <!-- end of /.team-member-about -->
+                                              <div class="team-member-social">
+                                                  <a href="mailto:scawley@ford.com">
+                                                      <i class="fa fa-send-o"></i>
+                                                  </a>
+                                                  <a href="https://www.linkedin.com/in/shannoncawley/" target="_blank">
+                                                      <i class="fa fa-linkedin"></i>
+                                                  </a>
+                                              </div> <!-- end of /.team-member-social -->
+                                          </div> <!-- end of /.team-member-description -->
+                                    </div> <!-- end of /.team-member-box -->
+                                  </div> <!-- Shannon -->
+                                </div>
+                            </div>
+                        </div> <!-- end of /.team-list -->
+
+
+                        <div class="headline text-center">
+                            <div class="row">
+                                <div class="col-md-6 col-md-offset-3">
                                     <h3>MSU Advisers</h3>
                                 </div>
                             </div>
