--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -108,14 +108,14 @@
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Megan" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/meganGendjar750x1000r72.jpeg" alt="Photo of Megan" /></span>
 											<center>
 												<h3>Megan</h3>
 												Junior<br> Crop and Soil Science
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/khushiVora750x1000r72.jpeg" alt="Photo of Kushie" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Kushie" /></span>
 											<center>
 												<h3>Kushi</h3>
 												Junior<br> Computer Science
@@ -157,10 +157,10 @@
 
 										<div class="col-12"><span><center><h2>MSU &amp; Pathlight Advisers</h2><center></span></div>
 
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey.jpeg" alt="Photo of Consuelo" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey750x1000.jpeg" alt="Photo of Consuelo" /></span>
 											<center>
 												<h3>Consuelo</h3>
-												??<br>Pathlight International<br>Belize
+												Director of Teacher Training<br>Pathlight International<br>Belize
 											</center>
 										</div>
 
