add email alias

--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -174,7 +174,7 @@
 								All cohorts will meet virtually in accordance with current MSU policy for Youth Programs.
 								Participants will receive the Zoom login information by email in the week before the first meeting.
 								The information will be sent to the email address(es) provided at registration.
-								Participants should white-list <a href="mailto:info@spartangwc.org">info@spartangwc.org</a> to prevent notices from going to spam.
+								Participants should white-list <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> to prevent notices from going to spam.
 							</p>
 							<p>
 								Remote meetings require use of a device with at least the capability of a Chromebook connected to the internet.
@@ -273,7 +273,7 @@
 																Michigan State University<br>
 																East Lansing, MI 48824<br>
 																Phone: (517)884-0054<br>
-																Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+																Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
 														</div>
 
 														<!-- links -->
