--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -67,12 +67,12 @@
 									<li>Submitted a <a href="https://forms.gle/HWgAznFRD5s1cPA19" target="_blank">MSU x Pathlight Coding Club Confirmation form</a>.</li>
 									<li>Returned a signed <a href="documents/S22 MSU x Pathlight Consent Form.pdf" target="_blank">Parent Consent form (.pdf)</a>.
 								</ul>
-								Please notify <a href="mailto:info@spartangwc.org">info@spartangwc.org</a> if you experience difficulty with either form.
+								Please notify <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> if you experience difficulty with either form.
 							</p>
 							<p>
 								An email will be sent to participants notifying them of the Zoom information for their cohort by the end of day Tuesday, January 11.
-								Please white-list <em>info@spartangwc.org</em> so that your mailer does not label mail that we send you as spam.
-								Send an email to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a> if you have not received a notice with your cohort information by Wednesday morning.
+								Please white-list <em>belizecc@egr.msu.edu</em> so that your mailer does not label mail that we send you as spam.
+								Send an email to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> if you have not received a notice with your cohort information by Wednesday morning.
 							</p>
 							<span class="image main"><img src="images/masked-sparty.jpeg" alt="Photo of the MSU Spartan Statue sporting a MSU mask."></span>
 
@@ -140,7 +140,7 @@
 											Michigan State University<br>
 											East Lansing, MI 48824<br>
 											Phone: (517)884-0054<br>
-											Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
 									</div>
 
 									<!-- links -->
