--- a/belizeweb/supporters.html
+++ b/belizeweb/supporters.html
@@ -175,7 +175,7 @@
 									Gifts to MSU are tax deductible to the extent permitted by law.
 								</p>
 								<p><em>
-									Please forward a copy of the receipt to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a> so that we can ensure that the gift is credited to the MSU x Pathlight Coding Clubs Program.
+									Please forward a copy of the receipt to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> so that we can ensure that the gift is credited to the MSU x Pathlight Coding Clubs Program.
 								</em></p>
 								<p>
 									If you prefer to mail your gift, please include your credit card number, expiration date, the name under which the card is issued, and the program (MSU x Pathlight - CSE) on your <a href="https://www.egr.msu.edu/sites/default/files/pledgeform.pdf" target="_blank">gift pledge form (.pdf)</a>.
@@ -258,7 +258,7 @@
 											Michigan State University<br>
 											East Lansing, MI 48824<br>
 											Phone: (517)884-0054<br>
-											Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
 									</div>
 
 									<!-- links -->
@@ -290,7 +290,7 @@
 					</div> <!-- inner -->
 
 				</footer>
-					
+
 
 			</div>
 
