--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -111,7 +111,7 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/meganGendjar750x1000r72.jpeg" alt="Photo of Megan" /></span>
 											<center>
 												<h3>Megan</h3>
-												Junior<br> Crop and Soil Science
+												Masters<br> Crop and Soil Science
 											</center>
 										</div>
 
@@ -252,7 +252,7 @@
 											Michigan State University<br>
 											East Lansing, MI 48824<br>
 											Phone: (517)884-0054<br>
-											Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
 									</div>
 
 									<!-- links -->
