--- a/belizeweb/clubs.html
+++ b/belizeweb/clubs.html
@@ -116,7 +116,7 @@
 											Michigan State University<br>
 											East Lansing, MI 48824<br>
 											Phone: (517)884-0054<br>
-											Email: <a href="mailto:info@spartangwc.org?subject=[MSU x PATH] **REPLACE WITH TOPIC**">info@spartangwc.org</a>
+											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
 									</div>
 
 									<!-- links -->
