--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -122,6 +122,12 @@
 											</center>
 										</div>
 
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jessiccaHernandez750x1000_72R.png" alt="Photo of Jessicca" /></span>
+											<center>
+												<h3>Jessicca</h3>
+												Junior<br> Computer Science
+											</center>
+										</div>
 
 										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of David" /></span>
 											<center>
@@ -131,14 +137,14 @@
 										</div>
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Ryan" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/ryan750x1000r72.png" alt="Photo of Ryan" /></span>
 											<center>
 												<h3>Ryan</h3>
 												Senior<br> Applied Engineering
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Dalety" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" alt="Photo of Dalety" /></span>
 											<center>
 												<h3>Dalety</h3>
 												First Year<br>
