--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -129,7 +129,7 @@
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of David" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/davidVanderSloot750x1000r72.jpg" alt="Photo of David" /></span>
 											<center>
 												<h3>David</h3>
 												Senior<br> Computational Data Science
