update page titles

--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Resources - SS22 MSU x Pathlight Coding Club</title>
+		<title>Resources - MSU x Pathlight Belize Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
