--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>SS 22 MSU + Pathlight Coding Club</title>
+		<title>MSU x Pathlight Belize Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
